--- a/index.html
+++ b/index.html
@@ -37,5 +37,10 @@
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        duration:1000,
+      });
+    </script>
   </body>
 </html>
